--- a/test.tex
+++ b/test.tex
@@ -58,7 +58,7 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 \medskip
 {\small\parbox{11cm}{%
 \hfill To the memory of Sir Michael Atiyah\\
-The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor of $10^{61}$, resolving at last the vacuum energy dilemma. The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with  the Atiyah's constant, showing Four Force Unification. The Holic Principle, Eddington's, Wyler's, Atiyah's and Sternheimer's approaches must unlock the Particle Physics, with emphasis on the $10^{61}$ Trans-Plankian Quantized time, the Kotov's period, the Tifft's speed, the Koide-Sanchez constant, the Brannen matrix, the massive gluons and composite d quark. Standard Cosmology, based on the imperfect cosmological principle will be excluded by the observation of mature galaxies in the very far-field.  
+The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle and interpreting the dimensionless parameters as optimal calculation bases. The later are unified in the Topological Axis, which exhibits the string theory dimension series 4k+2, with the emphasis on the values 26 (visible Universe) and 10 (the Hydrogen - Pion couple). The 1D extension of the Holographic Principle defines the Grandcosmos and a $10^{61}$ Trans-Plankian quantified time. This resolves at last the vacuum energy dilemma and confirms the matter-antimatter Oscillatory Bounce. The mathematics-physics fusion is proved by $10^{-9}$ precise relations, implying the Eddington's constant 137 together with the Atiyah's constant, showing Four Force Unification. The Holic Principle and Eddington's Theory must unlock Particle Physics,  with massive gluons and composite d quark. The standard evolutionary cosmology, based on the imperfect cosmological principle, will be excluded by the observation of mature galaxies in the very far-field, and the invariance of the CMB temperature.  
 
 %Mature galaxies will be found in the far-field instead of a dark space, rejecting thus the evolutionary cosmology, ill-founded %o%%n the imperfect cosmological principle.
 
@@ -90,9 +90,9 @@ Contents
    
 ~~~    4.2. The Coherent Cosmic Oscillation (CCO)
    
-~~~    4.3. The omnipresence of CCO in astropphysics
+~~~    4.3. The omnipresence of CCO in astrophysics
    
-~~~    4.4 The Tifft, Arp and Pionner effects
+~~~    4.4. The Tifft, Arp and Pionner effects
    
 5. The Logic of Dimensional Analysis
 
@@ -118,7 +118,7 @@ Contents
    
  9. The Fine-Tuning with basic mathematical constants
  
-~~~    9.1. The optimal calculatio base $e$ confirmed
+~~~    9.1. The optimal calculation base $e$ confirmed
    
 ~~~    9.2. The Lenz-Wyler's Formula
    
@@ -140,23 +140,23 @@ Contents
 
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, partially due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
-One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
+One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from known physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
 The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed firstly \cite{Eddington}, must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the basis of Coherent Cosmology \cite{Sanchez1}.
 
-So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. But the rejection of Eddington's pioneer work was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed, since, far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
+So Eddington considered rightly the Cosmic Large Number correlations, as recalled in this article. However, his work was rejected for obscure reasons and this rejection was enforced by the fact that about 30 dimensionless parameters appear as 'free parameters' in the Particle standard model. They are misnamed since far from being really 'free', they are imposed by Nature. Nevertheless, a large majority of theorists believe they are due to chance, leading to a separation between Physics and Mathematics, not to speak of Biology. Thus, through the above Anthropic Principle, a majority believe in the Multiverse conundrum, a multiplicity of sterile Universe \cite{Carr}.
 
-The present article shows that \textit{Physics is an unique part of Mathematics, which are presently uncomplete}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
+The present article shows that \textit{Physics is a unique part of Mathematics, which are presently incomplete}, refuting the Multiverse Hypothesis by very precise fine-tuning ($10^{-9})$ between main physical and mathematical constants: $\pi$, $e$ and $\gamma$, the Euler-Mascheroni constant. Also, this study confirms the super-string theory, but with complete rehabilitation of the \textit{tachyonic} bosonic string theory.
 
-\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions ? We propose that the parameters are optimal base in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
+\textit{A decisive point of physics is the energy conservation, the First Principle of Thermodynamics.} Theorists associate it with time uniformity, but a more direct and logical explanation is that cosmos is a computer, so Intelligent Life receives a justification: to help the Cosmos computation. This Inverted Anthropic Principle answers the first of all questions: why one asks questions? We propose that the parameters are optimal base in a Deterministic Computing Cosmos, and they appear indeed in DNA characteristics and triple-point temperatures of mammals and main molecules \cite{Sanchez1}.
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics.
 
-The fact that three parameters, amongst 30, are so clearly emerging means that physics, and more generally science, follows a hierarchical order: \textit{one can progress without knowing the details of the underlying fundamental theory.}
+The fact that three parameters, among 30, are so clearly emerging means that physics, and more generally science, follows a hierarchical order: \textit{one can progress without knowing the details of the underlying fundamental theory.}
 
 So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. 
 
-In the same manner, this article prefigures \textit{the fundamental theory, but precizing its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, which seems at first sight contradictory. 
+In the same manner, this article prefigures \textit{the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, which seems at first sight contradictory. 
 
 
 \begin{figure*}
@@ -167,18 +167,17 @@ In the same manner, this article prefigures \textit{the fundamental theory, but 
 periodicity 8 [19] which is at the origin of the name `Topological Axis`. 
 \textit{With unit the Electron Compton wavelength, in the macro-physics side}, the Universe circumference 
     is tied to the bosonic critical dimension 26, while Bott reduction leads to n = 18 (thermal photon, 
-    tied to the the mammal wavelength through the Sternheimer scale factor j), n = 10, (superstring 
+    tied to the the mammal wavelength through the Sternheimer scale factor j), n = 10, (super-string 
     dimension, Hydrogen atom), and n = 2 (string). For the number 24 of transverse dimensions, it is
-    the Kotov length, through a factor 2$\pi$a, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it means the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y\approx 2e$, it is 
-    the Grandcosmos radius.
+    the Kotov length, through a factor 2$\pia$, with $a \approx 137.036$. For $n \approx \Gamma $, the Atiyah constant, it means the galaxy group radius, a characteristic cosmic length ($10^{6}$ ligth-years). For $k \approx e^{2}$, $y \approx 2e$, it is the Grandcosmos radius.
    \textit{With the same unit, the Electron Compton wavelength, in the micro-physics side}, the Space-Time-Matter
-    Holic dimension n = 30 is tied to $c$ times the cosmic Supercycle period, while Cartan-Bott reduction lead to the gauge bosons:
+    Holic dimension n = 30 is tied to $c$ times the cosmic Supercycle period, while Bott reductions lead to the gauge bosons:
     n = 22 (GUT bosons, $10^{16} GeV$), n = 14 (weak bosons) and n = 6 (massive gluons, about 10 MeV).
     For the superstring n = 10, it is the Pion. For $k \approx \pi$, n $\approx \gamma \times \Gamma$, Y $\approx 496^2$ 
     the square of the Green-Schwarz string dimension and the tenth root of the Monster cardinal, it is
     the Brout-Englert-Higgs boson (125 GeV). For k $\approx 2e^e$, it is the Topon, the visible Universe wavelength,
-    which identifies with the monoradial unit length of the Bekenstein-Hawking Universe entropy.
-   \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while  n $\approx \Gamma$, 
+    which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy.
+   \textit{With unit the electron mass}, n = 24 would correspond to the photon mass, while n $\approx \Gamma$, 
     to the graviton mass.
     \textit{With unit the Kotov length}, the Holic dimension n = 30 corresponds to the Monster cardinal, 
     apart a $\sqrt2$ factor.}
@@ -191,31 +190,13 @@ periodicity 8 [19] which is at the origin of the name `Topological Axis`.
 \section {The Cosmic Fine-Tuning and the Topological Axis}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics.
-The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
-Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
-clue in the steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
+We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics. The most famous fine tuning implies cosmic quantities, awkwardly called the `Double Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious clue in the steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
 This Cosmological Fine-Tuning leads directly to a \textit{Gravitational Hydrogen molecule model of the visible universe} \cite{Sanchez1}.
-Defining the Universe horizon radius with $R = 2a_{G} \lambdabar_{e}$ the factor 2 expresses its bi-atomic
-Hydrogen molecule characteristics, where 
-$\lambdabar_{e} = \hbar/cm_{e}$
-is the Electron Compton reduced wavelength, and the
-gravitational coupling constant is: 
-$a_{G} = \hbar c/Gm_{p}m_{H}$
-where $m_p$ and $m_H$ are the proton and hydrogen atom masses.
-So, \textit{the speed $c$ is eliminated}, in accordance with
-Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the
-most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$.
+Defining the Universe horizon radius with $R = 2a_{G} \lambdabar_{e}$, where the factor 2 comes from the bi-atomic structure, where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, and the gravitational coupling constant is: 
+$a_{G} = \hbar c/Gm_{p}m_{H}$, where $m_p$ and $m_H$ are the proton and hydrogen atom masses. So, \textit{the speed $c$ is eliminated}, in accordance with Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$.
 
 Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4 \times 10^{-96} m$$ This `Topon` is close to the touchstone n = 30 of the Topological Axis, see Fig. 1. The Topological Axis illustrates the function $f(n + 4) = f^{2}(n)$
-and stems from the imbrication of relations of the form 
-$
-\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}
-$
-followed by 
-$
-l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l^{\prime}_{micro} )^{2}
-$ leading to:
+and stems from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}$, followed by $ l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l^{\prime}_{micro} )^{2}$, leading to:
 $$
 \begin{array}{ll}
 %
@@ -225,147 +206,98 @@ $$
 \sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
 \end{array}
 $$
-These series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eightfold,
-including, apart from the two above relationships, three relations that have been independently reported \cite{Sanchez1}.
-The overall large number $2^{256}$ has an obvious computational characteristic, confirmed below by the
-dramatic appearance of the Eddington Large Number.
+These series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eight-fold, including, apart from the two above relationships, three relations that have been independently reported \cite{Sanchez1}. The overall large number $2^{256}$ has an obvious computational characteristic, confirmed below by the dramatic appearance of the Eddington Large Number.
 
-In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation which is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we infer 
-$
-R/r_H \approx (4\pi \lambda_{CMB} /r_H)^{4}
-$ 
-precise to $0.6\%$. 
+In particular, the relation $R/\lambdabar_{e} \sim (\lambda_{CMB} / \lambdabar_{e})^{4}$ ties two cosmic lengths, the Hubble radius and the CMB wavelength by a relation that is incompatible with the standard evolutionary cosmology. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we infer 
+$ R/r_H \approx (4\pi \lambda_{CMB}/r_H)^{4}$, precise to $0.6\%$. 
 Considering the standard cosmological neutrino background (CNB), which wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $R/ \lambdabar_{e} \approx
-( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$ to $1.7\%$.
-The appearance of the neutrino field is conform
-with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-
-antimatter Oscillatory Bounce \cite{Sanchez2}.
+( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$ to $1.7\%$. The appearance of the neutrino field is conform with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-antimatter Oscillatory Bounce \cite{Sanchez2}.
 
-It was noted in \cite{Carr} that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-
-Electron. With the above $R$ value, one observes the following more symmetrical relation involving
-the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
+It was noted in \cite{Carr} that $a_{G}$ is of order $W^{8}$, where $W$ is the mass ratio W boson-Electron. With the above $R$ value, one observes the following more symmetrical relation involving the other (neutral) weak boson Z, in the 0.01\% indetermination of $W$ and $Z$:
 \begin{equation}
 R/(\lambdabar_{p}\lambdabar_{H})^{1/2}\approx (WZ)^4
 \end{equation}
 where $\lambdabar_{p}$ and $\lambdabar_{H}$ are the Proton and Hydrogen reduced wavelengths. The precision of this formula will be pulled to the ppb range in section 9.4, by intervention of canonical mathematical constants.
 
-The gravitational Hydrogen molecule model \cite{Sanchez1} implies the following double correlation,
-which is the simplest case of Eddington's statistical theory \cite{Eddy}: the position of a `reference particle`
-is supposed to be determined with an uncertainty of ${R/2}$. For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $ m = m^{\prime}_{e} = m_{e} p/H$, and if, moreover, we equate
-the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
+The gravitational Hydrogen molecule model \cite{Sanchez1} implies the following double correlation, which is the simplest case of Eddington's statistical theory \cite{Eddy}: the position of a `reference particle` is supposed to be determined 
+with an uncertainty of ${R/2}$. 
+For N particles of mass $m$ components of the visible Universe, the deviance is statistically divided by $\sqrt{N}$, where $N = M/m$. If $m$ is the effective mass of the electron in the Hydrogen atom, $ m = m^{\prime}_{e} = m_{e} p/H$, and if, moreover, one equate the deviance $R/(2\sqrt{(M/m^{\prime}_{e}))}$ to the Hydrogen wavelength $\lambdabar_{H} = \hbar/c m_{H}$, one obtains the double relation:
 \begin{equation}
 R/2\lambdabar_{H} = (M/m^{\prime}_{e})^{1/2} = \hbar c/G m_{e} m_{p}
 \end{equation}
-\textit{This is the definitive interpretation of the Double Large Number Fine-tuning}. So, while the two
-pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation and Particle
-Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology \cite{Eddy}.
+\textit{This is the definitive interpretation of the Double Large Number Fine-tuning}. 
+So, while the two pillars of Physics, Relativity and Quantum Theory are unable to conciliate Gravitation 
+and Particle Physics, the third pillar, Statistical Physics, directly makes this connection in cosmology \cite{Eddington}.
 
-Recall that, contrary to what is often stated, quantum physics does not limit to micro-physics.
-Indeed the exclusion principle applies in both solid state physics and in stellar physics. In particular,
-for a star containing $N_s$ atoms, in which the pressure has reached the quantum degenerancy value
-(case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$
-\cite{Sanchez1}. So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole
-century, was already contained in astrophysics textbooks. The universe radius amazingly appears as
-the limit of a mono-atomic star radius, for which the electrons are in degeneracy state. Eddingon was
-aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the
-Hubble measurement for $R$ was false by an order of magnitude.
+Recall that, contrary to what is often stated, quantum physics does not limit to micro-physics. Indeed, the exclusion principle applies in both solid state physics and in stellar physics. In particular, for a star containing $N_s$ atoms, in which the pressure has reached the quantum degeneracy value (case of white dwarfs), exclusion principle applies for electrons, and the radius star is about $R/N_{s}^{1/3}$ \cite{Sanchez1}. So the formula giving the Hubble radius $R$, a very difficult measurement which puzzled a whole century, was already contained in astrophysics textbooks. 
+The universe radius amazingly appears as the limit of a mono-atomic star radius, for which the electrons are in degeneracy state. Eddingon was aware of this Cosmologic Exclusion Principle, but could not conclude since, at his epoch, the Hubble measurement for $R$ was false by an order of magnitude.
 
-The reason for this discrepancy is that Lema\^itre and Hubble considered galaxies of the Local
-Group, which do not participate the so-called space expansion. In fact, it is sufficient to introduce a
-repulsive force proportional to separation distance, for explaination of the steady-state
-exponential recession. There is no need of the so-called `dark energy`, the repulsive force is equivalent
-to reintroduce the Einstein cosmological constant with invariant value $1/R^{2}$. 
+The reason for this discrepancy is that Lema\^itre and Hubble considered galaxies of the Local Group, which do not participate the so-called space expansion. In fact, it is sufficient to introduce a repulsive force proportional to separation distance, for explanation of the steady-state exponential recession. There is no need of the so-called `dark energy`, the repulsive force is equivalent to reintroduce the Einstein cosmological constant with invariant value $1/R^{2}$. 
 
-The distance for which this force exceeds attractive
-gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, which corresponds, in the Topological
-Axis, to the Atiyah Constant $\Gamma$, presented in the Section 8.2, see Fig 1.
+The distance for which this force exceeds attractive gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, which corresponds, in the Topological Axis, to the Atiyah Constant $\Gamma$, presented in the Section 8.2, see Fig 1.
 
-In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in
-order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
-another evacuation mechanism must occur: \textit{it would be the role of massive black holes}.
+In the steady-state cosmology, such a repulsive force between galaxy groups is necessary, in order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group, another evacuation mechanism must occur: \textit{it would be the role of massive black holes}.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Toponic Holographic Quantification}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-In the steady-state cosmologic model of Bondi, Gold and Hoyle \cite{Sanchez1}, the Perfect Cosmological
-Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
-of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive
-neutrons at rate $c^{3} /Gm_{n}$, corresponding to about one neutron by century in a cathedral volume. The invariant visible Universe radius $R$ is then defined by the
-Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of
-critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `Topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
+In the steady-state cosmological model of Bondi, Gold and Hoyle \cite{Sanchez1}, the Perfect Cosmological Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession of galaxy groups, with time constant $R/c$ being compensated by the appearance of $m_n$ massive neutrons at rate $c^{3} /Gm_{n}$, 
+corresponding to about one neutron by century in a cathedral volume. 
+The invariant visible Universe radius $R$ is then defined by the Schwarszchild relation, so that each point is the center of an equivalent $R$-radius black hole, of critical mass $M = Rc^{2} /2G$ and wavelength $\lambdabar_M = \hbar/Mc = 2l_{P}^{2} /R$, the above `Topon`. The Bekenstein-Hawking entropy of this black-hole Universe shows an 1D extension of the standard Holographic
 Principle, until now devoted to 3D application only \cite{Bousso}:
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
-where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincar\'{e} stated \cite{Sanchez1}, the Permanent Cosmology must favor such integral relations. This one
-uses the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
+where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincar\'{e} stated \cite{Sanchez1}, the Permanent Cosmology must favor such integral relations. This one uses the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
 
-In the standard evolutionary view, the observed homogeneity of causally disconnected regions
-of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation
-hypothesis, which is unnecessary in the steady-state model. Indeed, the critical condition is
-provided by the above very definition of $R$.
+In the standard evolutionary view, the observed homogeneity of causally disconnected regions of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation hypothesis, which is unnecessary in the steady-state model. Indeed, the critical condition is provided by the above very definition of $R$.
 
 The cosmic wavelength $\lambdabar_{M}\sim 10^{-95} m$ breaks the `Planck's wall` by a factor $l_{P}/\lambdabar_{M}\sim 10^{61}$ : this explains why this holographic relation was long time unnoticed. Indeed, it was admitted that $l_{P}$ was the quantum of Space: in fact \textit{the Planck's length is an intermediate holographic length only}.
 
 Gravitational potential energy of a critical homogeneous sphere is $-(3/5)GM^{2}/R = -
-(3/10)Mc^{2}$, while the \textit{nonrelativistic} kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy is a
-trivial false problem. As recalled above, Relativity is a local theory that does not apply in
-cosmology at large: galaxies actually reach speed $c$, and, crossing the horizon, enter a Grandcosmos of
-radius $R_{GC}$, given, as a first approximation, by the symmetrical holographic relation, this time
-monochrome instead of the monoradial relation above:
+(3/10)Mc^{2}$, while the \textit{non-relativistic} kinetic energy of galaxies is $(3/10)Mc^{2}$. Their sum is therefore zero: the density of the so-called `dark energy` is compatible with 7/10, so that dark energy is a trivial false problem. 
+As recalled above, Relativity is a local theory that does not apply in cosmology at large: 
+galaxies actually reach speed $c$, and, crossing the horizon, enter a Grandcosmos of radius $R_{GC}$, given, as a first approximation, by the symmetrical holographic relation, here monochrome instead of the above mono-radial one:
 \begin{equation}
 S_{BH}\, = \pi(R/l_P )^{2} = 2\pi R^{(0)}_{GC} /l_{P}
 \end{equation}
-with $R^{(0)}_{GC} /R = l_{P} /\lambdabar_{M} \sim 10^{61}$. The conservation of the time constant $t = R/c = R^{(0)}_{GC} /C$ introduces a canonical velocity $C \sim 10^{61} c$, lifting the veil on an energy larger than that of the visible Universe by a factor of $10^{122}$, which can be identified with the $l_{P}$ - normalised quantum energy of vacuum, checked by
-the Casimir effect \cite{Duplantier}. The central problem of quantum cosmic physics is thus solved. Moreover, the
-objections against the Hawking approach using trans-Plankian frequencies are wiped out \cite{Damour}.
+with $R^{(0)}_{GC} /R = l_{P} /\lambdabar_{M} \sim 10^{61}$. 
+The conservation of the time constant $t = R/c = R^{(0)}_{GC} /C$ introduces a canonical velocity $C \sim 10^{61} c$, 
+lifting the veil on an energy larger than that of the visible Universe by a factor of $10^{122}$, which can be identified with the $l_{P}$ - normalized quantum energy of vacuum, checked by the Casimir effect \cite{Duplantier}. The central problem of quantum cosmic physics is thus solved. Moreover, the objections against the Hawking approach using trans-Plankian frequencies are wiped out \cite{Damour}.
 
 In a better approximation, justified below, $R$ is replaced in the above relation by $R^{\prime} = 2\hbar^{2}/Gm_{N}^{3}
-\approx 18.105$ Gly, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle
-physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R/2$: it corresponds to the
-elimination of $c$ between the classical electron radius and the Planck length \cite{Sanchez1}. In this way, the sphere
-of radius $R^{\prime}$ appears as the spherical hologram representation of the outer Grandcosmos:
+\approx 18.105$ Gly, where $m_{N} = am_{e}$ is the Nambu mass, of central importance in particle physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R/2$: it corresponds to the elimination of $c$ between the classical electron radius and the Planck length \cite{Sanchez1}. In this way, the sphere of radius $R^{\prime}$ appears 
+as the spherical hologram representation of the outer Grandcosmos:
 \begin{equation}
 S^{\prime}_{BH}\, = \pi(R^{\prime}/l_{P})^{2} = 2\pi R_{GC} /l_{P}
 \end{equation}
-This value will be dramaticaly confirmed in the section 5 (Fig.6).
+This value will be dramatically confirmed in the section 5 (Fig.6).
 
-Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple
-of the mass-equivalent $M$ of the visible Universe: $m = M/N_{m}$, and its canonical wavelength is $N_m \lambdabar_{M}$,
-allowing the following holographic extension of the above mono-radial holographic conservation:
+Assuming the Toponic Quantification Hypothesis, the mass of a particle is an exact sub-multiple 
+of the mass-equivalent $M$ of the visible Universe: $m = M/N_{m}$, and its canonical wavelength is 
+$N_m \lambdabar_{M}$, allowing the following holographic extension of the above mono-radial holographic conservation:
 \begin{equation}
 S_{BH} = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M} = 2\pi N_{m} R/\lambdabar_{m}
 \end{equation}
-This series of diametral circles generate, by scanning, the approximation of a sphere: one thus passes
-from disk to sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. But, for
-the approximation to be sufficient, \textit{the numbers $N_{m}$ must be very large}. In this way, the Cosmos-
-Computer can use the computational properties of the mathematical constants of the continuous
-analysis, such as $e$ and $\pi$ (See Section 4 and Discussion).
+This series of diametrical circles generate, by scanning, the approximation of a sphere: thus it goes 
+from disk to sphere. Note that this justifies the factor $\frac{1}{4}$ in above BH entropy. 
+But, for the approximation to be sufficient, \textit{the numbers $N_{m}$ must be very large}. In this way, the Cosmos-
+Computer can use the computational properties of the mathematical constants of the continuous analysis, such as $e$ and $\pi$ (See Section 4 and Discussion).
 
-The immensity of the Cosmos thus receives a computational holographic explanation, which is much simpler
-than that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with
-extreme precision, even with inflation. 
+The immensity of the Cosmos thus receives a computational holographic explanation, which is much simpler than that of standard cosmology, where initial conditions, during Planck's time, would be adjusted with extreme precision, even with inflation. 
 
 With $N_{Ed} = 136 \cdot2^{256}$ the Eddington's large number, one observes that $N_{Ed}$ times the neutron mass, corrected by the ratio $H/p$, central in Section 4, gives, to 41 ppm the effective mass $3M/10$, so that:
 \begin{equation}
 Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n 
 \end{equation}
-showing a kind of symmetry between the masses of particles .
-This directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except
-that it is close to the mass of the human ovocyte \cite{Sanchez1}. In this way, the local inertia is related to the distant
-masses, in accordance with the Mach principle, which the relativity theory does not explain.
-Another shortcoming of this theory is that it does not define any inertial frame. However, the
-Doppler assymmetry of the cosmic background indicates that the speed of our local group of galaxies is about
-630 km/s. The cosmic background is therefore tied to the Newton absolute frame, the Grandcosmos.
+showing a kind of symmetry between the masses of particles. This directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except that it is close to the mass of the human ovocyte \cite{Sanchez1}. In this way, the local inertia is related to the distant masses, in accordance with the Mach principle, which the relativity theory does not explain. Another shortcoming of this theory is that it does not define any inertial frame. However, the Doppler as-symmetry of the cosmic background indicates that the speed of our local group of galaxies is about 630 km/s. The cosmic background is, therefore, tied to the Newton absolute frame, the Grandcosmos.
 
-The mathematical continuity is excluded by the above Computation Principle, so the time associated
-to the above 'topon' 
+The mathematical continuity is excluded by the above Computation Principle, so the time associated to the above 'topon' 
 \begin{equation}
 t_M = \lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s 
 \end{equation}
-is the new candidate for the `Chronon`, the `quantum of time`, so the
-oscillatory bounce has a frequency about $10^{104}Hz $ \cite{Sanchez2}.
+is the new candidate for the `Chronon`, the `quantum of time`, so the oscillatory bounce has a frequency about $10^{104}Hz $ \cite{Sanchez2}.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Tachyonic Flickering Space-Time-Matter}
