--- a/test.tex
+++ b/test.tex
@@ -303,13 +303,11 @@ is the new candidate for the `Chronon`, the `quantum of time`, so the oscillator
 \section{The Tachyonic Flickering Space-Time-Matter}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The
-matter-antimatter flickering respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry.
+The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The matter-antimatter flickering respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry.
 
 \subsection{The Single Electron Cosmology}
 
-The single-electron cosmology \cite{Sanchez1} uses the electron indeterminacy, which is the real basis of the
-Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$, by respect to $\lambdabar_e$. 
+The single-electron cosmology \cite{Sanchez1} uses the electron indeterminacy, which is the real basis of the Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$, by respect to $\lambdabar_e$. 
 It is the value for which the mean cosmic value is also the atomic one:
 \begin{equation}
 \frac{\sum(1/n)}{\sum(1/n^{2})} = a^{\prime}
@@ -318,8 +316,7 @@ with the sum running from 2 to $R_{1} /\lambdabar_{e}$. This implies:
 $$
 R_{1} = \lambdabar_{e} exp((\pi^{2} /6 - 1)a^{\prime} + 1 - \gamma) \approx 15.77465 ~ Gly
 $$
-very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the
-Rydbergh correction factor and $p_{0} = 6\pi^{5}$ is the Lenz-Wyler value $p$ (Section 4):
+very close (0.4 ppm) to the following expression, where $p_{G} = P/2^{127/2}$, $\beta = (H - p)^{-1}$ is the Rydbergh correction factor and $p_{0} = 6\pi^{5}$ is the Lenz-Wyler value $p$ (Section 4):
 $$
 R_{1} = ( p_{G} /p_{0} )(\beta R R^{\prime})^{1/2}
 $$
@@ -329,26 +326,18 @@ R_1^3/R_{GC}^2 \approx \lambdabar_M
 \end{equation}
 this will be of paramount importance in section 7.3
 
-With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while
-the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible
-with $p/p_{0}$:
+With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible with $p/p_{0}$:
 $$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. 
 
-This $t_K$ value will be confirmed, in the ppb range, by the value
-deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb
-range, with $\Gamma$, the Atiyah Constant (section 4.5).
+This $t_K$ value will be confirmed, in the ppb range, by the value deduced from $t_{K} /t_{e} = (a_{G} a_{w})^{1/2}$, see below, using values of $a_{w}$ and $a_{G}$ connecting, again in the ppb range, with $\Gamma$, the Atiyah Constant (section 4.5).
 
-From the Holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is
-associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
+From the Holographic two-step interaction \cite{Sanchez1}, it was deduced that the Kotov period is associated with the photon mass. With the above value, it is $m_{ph} = \lambdabar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $kg.
 The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group.
 
 \subsection{The Cosmic Coherent Oscillation (CCO)}
 
-The Kotov non-Doppler cosmic oscillation \cite{Sanchez1} is not considered seriously, since it seems to
-violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
-this as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron
-characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating $c$ between $a_{G}$ and $a_{w}=
+The Kotov non-Doppler cosmic oscillation \cite{Sanchez1} is not considered seriously, since it seems to violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpretingthis as a tachyonic phenomena, we identified the Kotov period $t_{K} \simeq 9600.06(2) s$, taking the electron characteristic time $t_{e} = \lambdabar_{e} /c$ as unit, to the simplest relation eliminating $c$ between $a_{G}$ and $a_{w}=
 \hbar^{3} /G_{F} m_{e}^{2} c$, the well measured $(10^{-7})$ dimensionless electroweak coupling constant $a_{w}$ :
 \begin{equation}
 t_{K} / t_{e} = (a_{G} a_{w})^{1/2}
@@ -361,16 +350,11 @@ $
 G_{F} \equiv (\hbar c)^{3} /E_{F}^{2} \approx
 1.4358509(7) \cdot 10^{-62} Joule \cdot m^{3}
 $
-. This introduces the product of two area speeds, confirming the
-flickering hypothesis:
+. This introduces the product of two area speeds, confirming the flickering hypothesis:
 \begin{equation}
 (\lambdabar_{e}^2/t_{K} )(\hbar/(m_{p} m_{H})^{1/2} = (GG_{F})^{1/2}
 \end{equation}
-so the best measured cosmic quantity, the Kotov period, implies a symmetrization between
-gravitation and weak nuclear force. This specifies the $G$ value to $10^{-6}$ precision (ppm). It is
-compatible with the well-elaborate $(10^{-5})$ BIPM measurement \cite{Quinn}, at several sigmas from the Codata
-value \cite{Tanabashi}, but the later is the mean between discordant measurements.
-Computer analysis shows that this value of $G$ is compatible with the following well-defined value, with $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
+so the best measured cosmic quantity, the Kotov period, implies a symmetrization between gravitation and weak nuclear force. This specifies the $G$ value to $10^{-6}$ precision (ppm). It is compatible with the well-elaborate $(10^{-5})$ BIPM measurement \cite{Quinn}, at several sigmas from the Codata value \cite{Tanabashi}, but the later is the mean between discordant measurements. Computer analysis shows that this value of $G$ is compatible with the following well-defined value, with $d_{e} \approx 1.001159652$ the relative electron magnetic moment :
 $$\begin{array}{ll}
 (2^{127} /a_{G} )^{1/2} \approx d_{e} (H/p)^{3} \\
 \qquad  \qquad \Leftrightarrow \\
@@ -380,89 +364,42 @@ This value will be confirmed, in the ppb range, in Section 4.
 
 \subsection{The omnipresence of CC0 in astrophysics}
 
-With $t = R/c$, the relation $(t t_{K}^2)^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
-was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
-climate variation, was also of flickering cosmic origin \cite{Sanchez3}. This hypothesis has been recently
-confirmed by the straight temporal profile of the phenomena, showing it is tied to a quantum
-process \cite{Kotov2}.
+With $t = R/c$, the relation $(t t_{K}^2)^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic climate variation, was also of flickering cosmic origin \cite{Sanchez3}. This hypothesis has been recently confirmed by the straight temporal profile of the phenomena, showing it is tied to a quantum process \cite{Kotov2}.
 
-Remarkable enough, a `mysterious` period $\approx 1/9$ days of the Sun's pulsations has been predicted
-long before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin
-(1946) claimed that « la p\'{e}riode propre de vibration du Soleil, c'est-a-dire la periode de son infra-son (1/9 de jour), a jou\'{e} un role essentiel dans la distribution des plan\`{e}tes sup\'{e}rieures». Presumably,
-the Sevin's «vibration period» of the Sun was merely an issue of his reflections about resonances
-and distances inside the solar system. Nevertheless, solar pulsations with exactly that period were
-discovered, after decades, - and independently of the Sevin's paper, - by a few groups of
-astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of
-Cosmos too \cite{Kotov1}.
+Remarkable enough, a `mysterious` period $\approx 1/9$ days of the Sun's pulsations has been predictedlong before its actual discovery in 1974. Namely, 73 years ago, French amateur astronomer Sevin (1946) claimed that « la p\'{e}riode propre de vibration du Soleil, c'est-a-dire la periode de son infra-son (1/9 de jour), a jou\'{e} un role essentiel dans la distribution des plan\`{e}tes sup\'{e}rieures». Presumably, the Sevin's «vibration period» of the Sun was merely an issue of his reflections about resonances and distances inside the solar system. Nevertheless, solar pulsations with exactly that period were discovered, after decades, - and independently of the Sevin's paper, - by a few groups of astrophysicists. Soon the presence of the same period, or timescale, was found in other objects of Cosmos too \cite{Kotov1}.
 
-Opponents emphasize often that $t_{K}$ is very close to the 9th harmonic of the mean terrestrial day: the corresponding ratio - of the length of a day to the $t_{K}$ period - is equal to 8.99943(1), - and claim
-thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979;
-Fossat et al., 2017). As a matter of fact, however, the $t_{K}$ period occurs to be the best commensurate
-timescale for the spin rates of all the most massive and fast-rotating bodies of the solar system, in
-general.
+Opponents emphasize often that $t_{K}$ is very close to the 9th harmonic of the mean terrestrial day: the corresponding ratio - of the length of a day to the $t_{K}$ period - is equal to 8.99943(1), - and claim thus the $t_{K}$ oscillation of the Sun should be regarded as an artifact (see, e.g., Grec and Fossat, 1979; Fossat et al., 2017). As a matter of fact, however, the $t_{K}$ period occurs to be the best commensurate timescale for the spin rates of all the most massive and fast-rotating bodies of the solar system, in general.
 
-This is obvious from Fig. 2, which shows the resonance spectrum $F( \nu )$, calculated for 15
-motions of 12 largest, fast spinning, objects of the system (with the mean diameters $\geq 500$ km and
-periods inferior to 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian
-objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of
-9594(65) s, which coincides well, within the error limits, with $t_K$ at about $5.3 \theta$ C.L., i.e. with a
-chance probability $10^{-7}$.
+This is obvious from Fig. 2, which shows the resonance spectrum $F( \nu )$, calculated for 15 motions of 12 largest, fast spinning, objects of the system (with the mean diameters $\geq 500$ km and periods inferior to 2 days: six planets, three asteroids and three satellites, leaving apart trans-neptunian objects; see Kotov, 2018). The peak of the best commensurability corresponds to a period of 9594(65) s, which coincides well, within the error limits, with $t_K$ at about $5.3 \theta$ C.L., i.e. with a chance probability $10^{-7}$.
 
-It seems very puzzling also that the spatial scale $l_{K} \approx 19.24$ A.U. occurs to be the best
-commensurate with orbital sizes of the main planetary orbits of the solar system, - see Fig. 3,
-where the resonance spectrum $F( \nu )$ is plotted for 11 orbits, including those of asteroid belt, Pluto
-and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they
-were multiplied by $\pi$). The primary peak - of the best commensurability - corresponds to the
-spatial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7 \theta$ C.L. (Kotov, 2013).
+It seems very puzzling also that the spatial scale $l_{K} \approx 19.24$ A.U. occurs to be the best commensurate with orbital sizes of the main planetary orbits of the solar system, - see Fig. 3, where the resonance spectrum $F( \nu )$ is plotted for 11 orbits, including those of asteroid belt, Pluto and Eris (orbital «diameters» were approximated by the major axes, and for the inner orbits they were multiplied by $\pi$). The primary peak - of the best commensurability - corresponds to the spatial scale 9600(120) light sec., or 19.24(3) A.U., at $4.7 \theta$ C.L. (Kotov, 2013).
 
-Close binaries are characterized by the $t_{\Theta}$ resonance too, with the $\pi$ number as a factor of ideal
-incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum,
-or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic
-variables and related objects. The major peak, with C.L. of about $7 \theta$, corresponds to the timescale
-9590(70) s, coinciding within the error limits with $t_{K}$ (the stellar data were taken from all available
-binary stars catalogues and original papers).
+Close binaries are characterized by the $t_{\Theta}$ resonance too, with the $\pi$ number as a factor of ideal incommensurability of motions, or frequencies (Kotov, 2018). Fig. 4 shows the resonance spectrum, or metrics of motion, $F_{1} (\nu) \equiv F(\pi \cdot \nu/2)$, computed for 5746 close binaries, including cataclysmic variables and related objects. The major peak, with C.L. of about $7 \theta$, corresponds to the timescale 9590(70) s, coinciding within the error limits with $t_{K}$ (the stellar data were taken from all available binary stars catalogues and original papers).
 
-To compute the $F_{1} (\nu)$ spectrum, the program finds - for each test frequency $\nu$ - deviations of
-ratios $(2\nu_{i} /\pi \nu) k \geq 1$ from the nearest integers, and determines then the least-square minimum of such
-deviations. Here $\nu$ is the test frequency, $\nu_{i}$ minus the frequency of a given object, i = 1, 2, ...N - the
-ordinal number, with N, the total number of observed periods in a sample of objects, and the power
-k = 1 or -1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the
-first one, and the transcendental number $\pi$ appears as a factor of orbital stability, or «ideal»
-incommensurability, of motions, or frequencies (the $\pi$ number, in fact, characterizes geometry of
-space; for details see Kotov, 2018).
+To compute the $F_{1} (\nu)$ spectrum, the program finds - for each test frequency $\nu$ - deviations of ratios $(2\nu_{i} /\pi \nu) k \geq 1$ from the nearest integers, and determines then the least-square minimum of such deviations. Here $\nu$ is the test frequency, $\nu_{i}$ minus the frequency of a given object, i = 1, 2, ...N - the ordinal number, with N, the total number of observed periods in a sample of objects, and the power k = 1 or -1. The factor of two in Eq. (2) takes into account that second half of the orbit repeats the first one, and the transcendental number $\pi$ appears as a factor of orbital stability, or «ideal» incommensurability, of motions, or frequencies (the $\pi$ number, in fact, characterizes geometry of space; for details see Kotov, 2018).
 
-Recently it was shown, that the $t_K$ timescale characterizes, statistically, the motion of superfast
-exoplanets too, see Figure 5.
+Recently it was shown, that the $t_K$ timescale characterizes, statistically, the motion of superfast exoplanets too, see Figure 5.
 
-It was shown in fact, that a number of superfast, with periods inferior to 2 days, exoplanets revolve
-around parent stars with periods, near-commensurate with timescales $t_{1}$ and/or $2 t_{1}/\pi$, where $t_{1} =
-9603(85) s$ agrees fairly well with the period $t_{K} \approx 9600$ s of the so-called «cosmic oscillation», found
-firstly in the Sun, then - in other variable objects of the Universe (the probability that the two
-timescales would coincide by chance is near $3 \cdot 10^{-4}$).
+It was shown in fact, that a number of superfast, with periods inferior to 2 days, exoplanets revolve around parent stars with periods, near-commensurate with timescales $t_{1}$ and/or $2 t_{1}/\pi$, where $t_{1} = 9603(85) s$ agrees fairly well with the period $t_{K} \approx 9600$ s of the so-called «cosmic oscillation», found firstly in the Sun, then - in other variable objects of the Universe (the probability that the two timescales would coincide by chance is near $3 \cdot 10^{-4}$).
 
 \begin{figure}
 \centering
 \includegraphics[width=7cm,height=5.5cm]{./figures/figure1}
-\caption{Resonance-spectrum $F(\nu)$ computed for 15 motions of the largest, fast-spinning bodies of
-the solar system. On horizontal axis is logarithm of frequency $\nu$ in $\mu$Hz, the dashed horizontal line
-shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurable period 9594(65) s.}
+\caption{Resonance-spectrum $F(\nu)$ computed for 15 motions of the largest, fast-spinning bodies of the solar system. On horizontal axis is logarithm of frequency $\nu$ in $\mu$Hz, the dashed horizontal line shows a $ 3 \theta $ C.L., and the primary peak yields to the best - commensurable period 9594(65) s.}
 \label{fig:figure_label}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=7cm,height=5.5cm]{./figures/figure2}
-\caption{Same as Fig. 2, for N = 11 sizes `diameters` of the solar system (with c = 1 and the $\pi$
-factor for inner orbits). The highest peak corresponds to the spatial scale 9600(120) light sec.}
+\caption{Same as Fig. 2, for N = 11 sizes `diameters` of the solar system (with c = 1 and the $\pi$ actor for inner orbits). The highest peak corresponds to the spatial scale 9600(120) light sec.}
 \label{fig:figure_label}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=7cm,height=5.5cm]{./figures/figure3}
-\caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods < 5 days.
-Horizontal axis gives logarithm of the trial frequency $\nu$ in $\mu Hz$, the dashed line indicates a $3 \theta$
-C.L., and the major peak corresponds to a timescale of 9590(70) s.}
+\caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods < 5 days. Horizontal axis gives logarithm of the trial frequency $\nu$ in $\mu Hz$, the dashed line indicates a $3 \theta$ C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 \label{fig:figure_label}
 \end{figure}
 
