--- a/test.tex
+++ b/test.tex
@@ -399,46 +399,32 @@ It was shown in fact, that a number of superfast, with periods inferior to 2 day
 \begin{figure}
 \centering
 \includegraphics[width=7cm,height=5.5cm]{./figures/figure3}
-\caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods < 5 days. Horizontal axis gives logarithm of the trial frequency $\nu$ in $\mu Hz$, the dashed line indicates a $3 \theta$ C.L., and the major peak corresponds to a timescale of 9590(70) s.}
+\caption{Resonance-spectrum $F_{1} ( \nu)$, computed for N = 5746 binaries with periods inferior to 5 days. Horizontal axis gives logarithm of the trial frequency $\nu$ in $\mu Hz$, the dashed line indicates a $3 \theta$ C.L., and the major peak corresponds to a timescale of 9590(70) s.}
 \label{fig:figure_label}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=7cm,height=5.5cm]{./figures/figure4}
-\caption{Same as Fig. 4, for the $F_{2} ( \nu )$ spectrum, computed for N = 145 exoplanets with P < 1.5
-days. The strongest peak of the composite commensurability corresponds to a period of 9640(115) s
-at nearly $3.9\theta$ significance (after Kotov, 2018).}
+\caption{Same as Fig. 4, for the $F_{2} ( \nu )$ spectrum, computed for N = 145 exoplanets with P inferior to 1.5 days. The strongest peak of the composite commensurability corresponds to a period of 9640(115) s, at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \label{fig:figure_label}
 \end{figure}
 
 \subsection{The Tifft, Arp and Pioneer effects}
 
-Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this
-speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{Sanchez1}.
+Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{Sanchez1}.
 
-The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also
-rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible
-Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass
-density $\rho_{c}$.
+The Halton Arp observations of chains of galaxies with different redshifts \cite{Arp} was also rejected. But it could be the sign of the galactic regeneration constantly maintaining the visible Universe mass: this is confirmed by the following confirmation of the invariance of the mean mass density $\rho_{c}$.
 
-Much controversial is the Pioneer deceleration \cite{Nieto} $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ It corresponds to
-the Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s $$ close to $$t = R/c \approx 4.3587 \times 10^{17} s $$ The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
+Much controversial is the Pioneer deceleration \cite{Nieto} $$g_{Pi} \approx 8.7 \times 10^{-10} ms^{-2}$$ It corresponds to he Pioneer time $$t_{Pi} = c/g_{Pi} \approx 3.4 \times 10^{17} s $$ close to $$t = R/c \approx 4.3587 \times 10^{17} s $$ The following section will show a connexion between the Kotov, Tifft and Pioneer effects.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Logic of Prospective Dimensional Analysis}\markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-Physical relations use principally physical quantities of the type $Q = M^{x} L^{y} T^{t}$, where
-the three categories, $M$, $L$ and $T$ are Mass, Length and Time measurements, and where the exponents are
-rational numbers. However, the addition of measures of different categories has no significance.
-This seems at first sight illogical, since, fundamentally, a product is a sum of additions. So, \textit{there
-must be a hidden common nature for the three categories, mass, length and time}. This sustains the
-above single electron cosmic model \cite{Sanchez1}. Moreover, this mimics the Fundamental Principle of
-Arithmetics, founded on prime numbers, but limited to the three $M$, $L$ and $T$ categories. 
+Physical relations use principally physical quantities of the type $Q = M^{x} L^{y} T^{t}$, where the three categories, $M$, $L$ and $T$ are Mass, Length and Time measurements, and where the exponents are rational numbers. However, the addition of measures of different categories has no significance. This seems at first sight illogical, since, fundamentally, a product is a sum of additions. So, \textit{there must be a hidden common nature for the three categories, mass, length and time}. This sustains the above single electron cosmic model \cite{Sanchez1}. Moreover, this mimics the Fundamental Principle of Arithmetics, founded on prime numbers, but limited to the three $M$, $L$ and $T$ categories. 
 
 Indeed, with $t =
-R/c$, summing the square of $ln(M^{\prime}/m_{e} )$, where $M^{\prime} = R^{\prime} c^{2} /2G$ is the critical mass in the above
-holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_{e} ) = ln(t/t_{e} )$, one gets, to 40 ppm:
+R/c$, summing the square of $ln(M^{\prime}/m_{e} )$, where $M^{\prime} = R^{\prime} c^{2} /2G$ is the critical mass in the above holographic sphere representing the Grandcosmos, and the square of $ln(R/\lambdabar_{e} ) = ln(t/t_{e} )$, one gets, to 40 ppm:
 \begin{equation}
 ln^{2} (M^{\prime}/m_{e} ) + ln^{2} (R/\lambdabar_{e}) + ln^2 (t/t_{e} ) \approx ln^2 (R_{GC} /\lambdabar_{e} )
 \end{equation} which traduces in function of $P = m_P/m_e$ by:
