--- a/test.tex
+++ b/test.tex
@@ -1298,9 +1298,9 @@ Forum conference (2018); www.heidelberg-laureate-forum.org/blog/video/lecture-mo
 \bibitem{Conway} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
 Math. Soc. 11(3) 308--339 (1979)
 
-\bibitem{Janko} Janko Zvonimir, ``Some new simple groups of finite order``. I, Symposia Mathematica (INDAM, Rome, 1967/68) Academic Press, London, 1969, pp. 25–64. MR 0244371
+%\bibitem{Janko} Janko Zvonimir, ``Some new simple groups of finite order``. I, Symposia Mathematica (INDAM, Rome, 1967/68) %Academic Press, London, 1969, pp. 25–64. MR 0244371
 
-\bibitem{Janko1} Janko Zvonimir, « A new finite simple group with abelian Sylow subgroups and its characterization », Journal of Algebra, vol. 32, 1966, p. 147-186
+\bibitem{Janko1} Janko Z., « A new finite simple group with abelian Sylow subgroups and its characterization », Journal of Algebra, vol. 32, 1966, p. 147-186
 
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
