--- a/test.tex
+++ b/test.tex
@@ -1188,9 +1188,10 @@ It is now clear that present mathematics and Particle Physics are incomplete, an
 
       This article leads to some predictions:
 \item 1/  The very large infra-red telescopes in preparation will show in the very far field old galaxies instead of expected young ones. Then no artifice, such as inflation, dark energy, multiverse ..., will not save the \textit{already refuted} standard evolutionary model.
-\item 2/ The Particle Physics will integrate the Koide relation and introduce massive gluons and composite quark down.
-\item 3/ Informatics software should  be boosted by the principle of multi-base computation.
-\item 4/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way. 
+\item 2/ The CMB temperature will appear invariant. 
+\item 3/ The Particle Physics will integrate the Koide relation together with Koide-Sanchez constant, and introduce massive gluons and composite quark down.
+\item 4/ Informatics software should  be boosted by the principle of multi-base computation.
+\item 5/ The multiple connexions with the DNA chain seems to imply it is a 1D hologram. Recent studies \cite{Widom} are on this way. 
 \end{itemize}
 
 
